--- a/Bayesian Data Synthesis Code.Rmd
+++ b/Bayesian Data Synthesis Code.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "MATH301 Data Modeling"
+title: "Data Modeling & Analysis"
 author: "Shunji & Jade"
-date: "2022-10-01"
+date: "2022-12-23"
 output: pdf_document
 ---
 
